...
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/ingredients_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="@dimen/line_spacing"
                android:paddingBottom="@dimen/margin_default"
                android:paddingEnd="@dimen/margin_default"
                android:paddingStart="@dimen/margin_default"
...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ingredients_title" />

        </android.support.constraint.ConstraintLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/steps_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero_dp_size"
            android:layout_marginEnd="@dimen/margin_default"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginTop="@dimen/margin_default"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
...
