...
            android:id="@+id/step_description"
            android:layout_width="@dimen/zero_dp_size"
            android:layout_height="@dimen/zero_dp_size"
            android:padding="@dimen/margin_default"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/step_text_size"
            app:layout_constraintBottom_toTopOf="@id/step_previous"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/step_video" />

        <ImageButton
            android:id="@+id/step_previous"
...
